Update image source and comment in index.html

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <a href="https://github.com/KingElguera" class="btn btn-secondary" target="_blank" rel="noopener">GitHub</a>
           </div>
         </div>
-        <!-- Ta photo : elle doit être dans le dossier assets et s'appeler photo.png (ou change le src ci-dessous) -->
+        <!-- Ta photo : photo.png à la racine du repo OU dans assets/ (voir README) -->
         <div class="hero-photo-wrap">
-          <img src="assets/photo.png" alt="Photo Ishimwe KING Elguera" class="hero-photo" id="heroPhoto">
+          <img src="photo.png" alt="Photo Ishimwe KING Elguera" class="hero-photo" id="heroPhoto">
           <div class="hero-photo-fallback" id="photoFallback">Photo</div>
         </div>
       </div>
